# real_robotino_pkg

./: CMakeLists.txt  Instrucao_de_Uso _Workspaces.txt  package.xml
config/: localizer_realbot.yaml  nav2_realbot_params.yaml
launch/: missionNavAndFollow.launch.py  missionObjectRecog.launch.py  real_bot.launch.py  teleop_bot.launch.py
missions/: missionFour.py  missionInspecao.py  missionNavigation.py  missionNavigationAndFollow.py  missionObjectRecog.py  missionOne.py  missionPersonalRecog.py  missionSpeechRecog.py  missionThree.py  missionTwo.py
scripts/: goal_sender.py  nav_toPose.py  porta_utils.py  submap_publisher.py
